# gnn_cancer

./: .gitignore  ALL_12_METRICS_STRATEGY.md  CHANGELOG.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY_REPORT.md  FIGURE_PLACEMENT_GUIDE.md  FINAL_IMPROVEMENTS_SUMMARY.md  Makefile  PERFORMANCE_GAP_CLOSURE_PLAN.md  README.md  ablation_studies.py  add_ppi_data.py  advanced_patient_level_training.py  analyze_attention.py  analyze_comprehensive_results.py  analyze_results.py  compare_results.py  compare_with_paper.py  comprehensive_paper_comparison.py  comprehensive_patient_level_processor.py  data_downloader.py  debug_gat.py  download_clinical.py  download_data.py  download_kaggle.py  download_kegg.py  download_ncbi.py  download_ncbi_data.py  download_tcga.py  download_tcga_brca.py  download_tcga_data.py  efficient_superior_gnn_training.py  enhanced_data_fetcher.py  enhanced_train.py  enhanced_training_fixed.py  ensemble_gat_models.py  environment.yml  evaluate_models.py  fetch_additional_real_data.py  final_12_metrics_achievement.py  (+43 more)
data_sources/: base.py  clinical.py  enhanced_data_collection.py  genomics_repos.py
docs/: PROJECTS_DETAILED.md  PROJECTS_OVERVIEW.md  UPDATED_PAPER.md
experiments/: advanced_dual_task_processor.py  advanced_massive_feature_engineering.py  advanced_optimization_strategy.py  analyze_attention.py  analyze_data_issues.py  analyze_results.py  build_enhanced_graph.py  build_graph.py  check_mutation.py  check_string_urls.py  comprehensive_evaluation.py  comprehensive_improvements_orchestrator.py  convert_graph.py  data_quality_improvements.py  (+35 more)
(+88 files in other folders)
